force-app/main/default/objects/Round_Robbin_Assignment__c/Round_Robbin_Assignment__c.object-meta.xml
<CustomObject>
    <label>Round Robbin Assignment</label>
    <nameField>
        <label>Round Robbin Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robbin Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>