force-app/main/default/objects/Round_Robbin_Assignment__c/fields/Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Count__c</fullName>
    <label>Active Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>